--- a/app/views/applics/_form.html.erb
+++ b/app/views/applics/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="span8 offset2 applic-form">
+  <div class="span12 applic-form">
     <%= form_for(@applic) do |f| %>
       <%= render 'shared/error_messages', object: f.object %>
       <h3><%= t(:personal_info) %></h3>
@@ -40,7 +40,6 @@
         <%= f.label :registration %> <%= f.text_field :registration %>
       </div>
        <div class="alert alert-info">
-         <button type="button" class="close" data-dismiss="alert">&times;</button>
            <%= t(:step2_warning) %>
        </div>
       <%= f.submit t(:save), class: "btn btn-large btn-primary", id: "Save" %>
