--- a/app/views/applics/show.html.erb
+++ b/app/views/applics/show.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, t(:your_application_details)) %>
 <h1 id="h1_your_application_details"><%= t(:your_application_details)%></h1>
 <div class="row">
-  <div class="span8 offset2 applic-form">
+  <div class="span12 applic-form">
     <%= link_to t(:home_link), root_path, class: "btn btn-large btn-secondary", id: "btn-home" %>
     <%= form_for(@applic) do |f| %>
       <%= render 'shared/error_messages', object: f.object %>
