--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,7 @@
 <h2><%= t(:edit_account) %></h2>
+<%= link_to t(:home_link), :back, :class => 'btn btn-large' %>
+<br/>
+<br/>
 <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put, :class => 'form-vertical' }) do |f| %>
   <%= f.error_notification %>
   <%= display_base_errors resource %>
@@ -14,8 +17,8 @@
   <%= f.input :password, :autocomplete => "off", :hint => t(:leave_it_blank), :required => false %>
   <%= f.input :password_confirmation, :required => false %>
   <%= f.input :current_password, :hint => t(:we_need_your_current_password), :required => true %>
-  <%= f.button :submit, t(:update), :class => 'btn-primary' %>
+  <%= f.button :submit, t(:update), :class => 'btn btn-large btn-primary' %>
 <% end %>
 <h3><%= t(:cancel_my_account) %></h3>
 <p><%= t(:unhappy) %> <%= link_to t(:cancel_my_account), registration_path(resource_name), :data => { :confirm => "#{t(:are_you_sure)}?" }, :method => :delete %>.</p>
-<%= link_to t(:back), :back %>
+<%= link_to t(:home_link), :back, :class => 'btn btn-large' %>
