--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,94 +1,112 @@
-      <!-- Jumbotron -->
-      <div class="jumbotron">
-        <div class="row">
-          <div class="span7">
-            <!--p style="text-align:center;"><b><%= t(:welcome_myaksts)%></b></p-->
-            <p style="text-align:center;">
-              <% if params[:locale]=='en' %>
-                <p style="text-align:center;"><b>2015 CONFERENCE IS COMING!</b></p>
-                <p>2015 Science and Technology AKSTS conference will  be from 19 to 21 of July 2015.</p>
-                <p>Conference will be hold in Moscow or Moscow territory. Conference will be in format CIS - Korea. Soon registration will be opened.</p>
-                <p>Sincerely Yours AKSTS</p>
+<!-- Jumbotron -->
+<div class="jumbotron">
+  <div class="row">
+    <div class="span7">
+      <!--p style="text-align:center;"><b><%= t(:welcome_myaksts)%></b></p-->
+      <p style="text-align:center;">
+        <% if params[:locale]=='en' %>
+          <p style="text-align:center;"><b>2015 CONFERENCE IS COMING!</b></p>
+          <p>2015 Science and Technology AKSTS conference will  be from 19 to 21 of July 2015.</p>
+          <p>Conference will be hold in Moscow or Moscow territory. Conference will be in format CIS - Korea. Soon registration will be opened.</p>
+          <p>Sincerely Yours AKSTS</p>
+        <% else %>
+          <p style="text-align:center;"><b>КОНФЕРЕНЦИЯ 2015 УЖЕ СКОРО!</b></p>
+          <p>Определены сроки проведения Ежегодной конференции по науке и технологиям, проводимой АНТОК - с 19 по 21 июля 2015 года.</p>
+          <p>Место поведения конференции - Москва или ближнее Подмосковье. Конференция планируется в формате СНГ - Корея. В ближайшее время будет открыта онлайн регистрация участников конференции и объявлен сбор тезисов.</p>
+          <p>Регистрация откроется в ближайшие дни.</p>
+          <p>С уважением, Ваш АНТОК</p>
+        <% end %>
+      </p>
+      <br/>
+      <div class="buttonsclass">
+        <% if user_signed_in? %>                   
+          <% if current_user.has_role? :admin %>
+            <p><%= link_to "Смотреть все анкеты", kofst_applics_path, class: "btn btn-large btn-success"%></p>                
+            <p><%= link_to "Смотреть все заявки", applics_path, class: "btn btn-large btn-success"%></p>
+            <p><%= link_to "Отправка сообщений", messages_path, class: "btn btn-large btn-success"%></p>
+            <p><%= link_to "Мониторинг отправки", "resque", class: "btn btn-large btn-success", target: "_blank"%></p>
+          <% else %>
+            <% if current_user.is_antok_member? %>
+              <p><%= link_to t(:step1_view_btn), edit_user_registration_path, class: "btn btn-large"%></p>
+              <% if current_user.applic %>
+                <p><%= link_to t(:step2_view_btn), current_user.applic, class: "btn btn-large"%></p>
               <% else %>
-                <p style="text-align:center;"><b>КОНФЕРЕНЦИЯ 2015 УЖЕ СКОРО!</b></p>
-                <p>Определены сроки проведения Ежегодной конференции по науке и технологиям, проводимой АНТОК - с 19 по 21 июля 2015 года.</p>
-                <p>Место поведения конференции - Москва или ближнее Подмосковье. Конференция планируется в формате СНГ - Корея. В ближайшее время будет открыта онлайн регистрация участников конференции и объявлен сбор тезисов.</p>
-                <p>Регистрация откроется в ближайшие дни.</p>
-                <p>С уважением, Ваш АНТОК</p>
+                <p><%= link_to t(:step2_apply_btn), new_applic_path, class: "btn btn-large btn-success"%></p>
               <% end %>
-            </p>
-            <br/>
-            <div class="buttonsclass">
-              <% if user_signed_in? %>                   
-                <% if current_user.has_role? :admin %>
-                  <p><%= link_to "Смотреть все анкеты", kofst_applics_path, class: "btn btn-large btn-success"%></p>                
-                  <p><%= link_to "Смотреть все заявки", applics_path, class: "btn btn-large btn-success"%></p>
-                  <p><%= link_to "Отправка сообщений", messages_path, class: "btn btn-large btn-success"%></p>
-                  <p><%= link_to "Мониторинг отправки", "resque", class: "btn btn-large btn-success", target: "_blank"%></p>
+            <% else %>
+              <p><%= link_to t(:step1_view_btn), edit_user_registration_path, class: "btn btn-large"%></p>
+              <% if current_user.applic %>
+                <p><%= link_to t(:step2_view_btn), current_user.applic, class: "btn btn-large"%></p>
+                <% if current_user.kofst_applic %>
+                  <p><%= link_to t(:step3_view_btn), current_user.kofst_applic, class: "btn btn-large"%></p>
                 <% else %>
-                  <p><%= link_to t(:step1_view_btn), edit_user_registration_path, class: "btn btn-large"%></p>  
-                  <% if current_user.applic %>
-                    <p><%= link_to t(:step2_view_btn), current_user.applic, class: "btn btn-large"%></p>
-                  <% else %>
-                    <p><%= link_to t(:step2_apply_btn), new_applic_path, class: "btn btn-large btn-success"%></p>
+                  <% if current_user.applic.need_compensation? %>
+                    <p><%= link_to t(:step3_apply_btn), new_kofst_applic_path, class: "btn btn-large btn-success"%></p>
+                    <div class="alert alert-info">
+                      Персональная анкета заполняется НЕ членами АНТОК, при необходимости компенсации транспортных расходов.
+                    </div>
                   <% end %>
-
                 <% end %>
               <% else %>
-                  <!--p><%= link_to t(:home_link_log_in), new_user_session_path, class: "btn btn-large btn-success"%></p>
-                  <p><%= t(:or) %></p>
-                  <p><%= link_to t(:sign_up), new_user_registration_path, class: "btn btn-large btn-success"%></p-->                
-              <% end %>
-            </div>   
-          </div>
-          <div class="span5">
-            <%= image_tag "teneb.jpg" %>
-            <div id="small">
-              <% if params[:locale]=='en' %>
-                E.B. Ten., prof. National University of Science and Technology "MISIS" (MISIS), president of AKSTS Russia
-              <% else %>
-                Тэн Э.Б., проф. Национального исследовательского технологического университета "МИСиС", президент АНТОК
-              <% end %>
+                <p><%= link_to t(:step2_apply_btn), new_applic_path, class: "btn btn-large btn-success"%></p>
+              <% end %>                  
+            <% end %>
+          <% end %>
+        <% else %>
+            <!--p><%= link_to t(:home_link_log_in), new_user_session_path, class: "btn btn-large btn-success"%></p>
+            <p><%= t(:or) %></p>
+            <p><%= link_to t(:sign_up), new_user_registration_path, class: "btn btn-large btn-success"%></p-->                
+        <% end %>
+      </div>   
+    </div>
+    <div class="span5">
+      <%= image_tag "teneb.jpg" %>
+      <div id="small">
+        <% if params[:locale]=='en' %>
+          E.B. Ten., prof. National University of Science and Technology "MISIS" (MISIS), president of AKSTS Russia
+        <% else %>
+          Тэн Э.Б., проф. Национального исследовательского технологического университета "МИСиС", президент АНТОК
+        <% end %>
+      </div>
+    </div>
+  </div>
+<!--         <h1><%= t(:home_welcome) %></h1>
+  <p class="lead"><%= t(:home_lead) %></p> -->
+<!--             <div class="my1">
+      <div id="myCarousel" class="carousel slide">
+          <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1" class=""></li>
+            <li data-target="#myCarousel" data-slide-to="2" class=""></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="item active">
+              <%= image_tag("slide-image-1.jpg", alt: "") %>
+              <div class="carousel-caption">
+                <p>Конференция 2011 года, Звенигород</p>
+              </div>
+            </div>
+            <div class="item">
+              <%= image_tag("slide-image-2.jpg", alt: "") %>
+              <div class="carousel-caption">
+                <p>Этническая корейская научная конференция, Сеул, 2012</p>
+              </div>
+            </div>
+            <div class="item">
+              <%= image_tag("slide-image-3.jpg", alt: "") %>
+              <div class="carousel-caption">
+                <p>Конференция 2013 года, Новосибирск</p>
+              </div>
             </div>
           </div>
+          <a class="left carousel-control" href="#myCarousel" data-slide="prev">‹</a>
+          <a class="right carousel-control" href="#myCarousel" data-slide="next">›</a>
         </div>
-<!--         <h1><%= t(:home_welcome) %></h1>
-        <p class="lead"><%= t(:home_lead) %></p> -->
-<!--             <div class="my1">
-            <div id="myCarousel" class="carousel slide">
-                <ol class="carousel-indicators">
-                  <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                  <li data-target="#myCarousel" data-slide-to="1" class=""></li>
-                  <li data-target="#myCarousel" data-slide-to="2" class=""></li>
-                </ol>
-                <div class="carousel-inner">
-                  <div class="item active">
-                    <%= image_tag("slide-image-1.jpg", alt: "") %>
-                    <div class="carousel-caption">
-                      <p>Конференция 2011 года, Звенигород</p>
-                    </div>
-                  </div>
-                  <div class="item">
-                    <%= image_tag("slide-image-2.jpg", alt: "") %>
-                    <div class="carousel-caption">
-                      <p>Этническая корейская научная конференция, Сеул, 2012</p>
-                    </div>
-                  </div>
-                  <div class="item">
-                    <%= image_tag("slide-image-3.jpg", alt: "") %>
-                    <div class="carousel-caption">
-                      <p>Конференция 2013 года, Новосибирск</p>
-                    </div>
-                  </div>
-                </div>
-                <a class="left carousel-control" href="#myCarousel" data-slide="prev">‹</a>
-                <a class="right carousel-control" href="#myCarousel" data-slide="next">›</a>
-              </div>
-            </div> -->
+      </div> -->
 
 <!--         <% if !user_signed_in? %>
-        <%= link_to t(:sign_up), new_user_registration_path, class: "btn btn-large btn-success"%>
-        <% end %> -->
+  <%= link_to t(:sign_up), new_user_registration_path, class: "btn btn-large btn-success"%>
+  <% end %> -->
 
-      </div>
+</div>
 
