Mikhail Klishevich footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -60,7 +60,7 @@
               <% else %>
                 Разработка сайта
               <% end %>
-              <a href="http://www.busation.com/">@busation</a></li>
+              <a href="https://www.facebook.com/klishevich">Mikhail Klishevich</a></li>
           </ul>
         </nav>
       </footer>       
