add antok id search

--- a/app/views/applics/_form.html.erb
+++ b/app/views/applics/_form.html.erb
@@ -28,7 +28,7 @@
           options_for_select([[t(:choose_value),""], [t(:participance), "Очное"], [t(:publications_only), "Заочное"]], :selected=> @applic.participation_type) %>
       <h3><%= t(:compensation_info) %></h3>
       
-      <%= f.label :need_compensation, :class => "checkbox inline" %> <%= f.check_box :need_compensation %>
+      <%= f.label :need_compensation %> <%= f.check_box :need_compensation %>
       <br/>
       <br/>
       <div id="compensation_info_block">
