--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -14,7 +14,7 @@
     <div id="antok_id_block">
       <%= f.input :antok_id%>
       <div class="alert alert-info" style="width:470px;">
-        <p>Тут можно узнать свой АНТОК ID - <a href="/antok_id" target="_blank">страница поиска АНТОК ID</a></p>
+        <p>Тут можно узнать свой АНТОК ID - <a href="/antok_id" target="_blank">http://my.aksts.ru/antok_id</a></p>
       </div>
     </div>
   <% end %>
@@ -26,7 +26,8 @@
     <br/>
     <br/>
     <div class="alert alert-info" style="width:470px;">
-      Если нужна компенсация расходов, то на втором шаге потребуется ИНН, СНИЛС и адрес регистрации с индексом. Пожалуйста, приготовьте информацию заранее.
+      <b/>Компенсация расходов предоставляется только членам АНТОК</b><br/>
+      Если нужна компенсация, то на втором шаге потребуется ИНН, СНИЛС и адрес регистрации с индексом. Пожалуйста, приготовьте информацию заранее.
     </div>
   <% end %>
 <% end %>
