--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,8 @@
                 <% else %>
                 <li><%= link_to t(:home_link_log_in), new_user_session_path %></li>
                 <li><%= link_to t(:sign_up), new_user_registration_path %></li>
-                <% end %>                
+                <% end %>      
+                <li><%= link_to t(:find_antokid), antok_id_path %></li>
                 <!--li><%= link_to t(:home_link_prog), programme_path %></li>
                     
                 <li><%= link_to t(:home_link_conf), about_path %></li>
