--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= content_for?(:title) ? yield(:title) : t(:home_conf_antok) %></title>
@@ -31,8 +31,8 @@
                 <li><%= link_to t(:home_link_home), root_path %></li>
                 <% if user_signed_in? %>
                   <li><%= link_to t(:step2_my_account_btn), edit_user_registration_path %></li>
-                  <li><%= link_to t(:home_link_log_out), destroy_user_session_path, :method=>'delete' %></li>
                   <li><%= link_to t(:find_antokid), antok_id_path %></li>
+                  <li><%= link_to t(:home_link_log_out), destroy_user_session_path, :method=>'delete' %></li>
                 <% else %>
                   <li><%= link_to t(:home_link_log_in), new_user_session_path %></li>
                   <li><%= link_to t(:sign_up), new_user_registration_path %></li>
@@ -52,7 +52,7 @@
       <%= yield %> 
 
       <footer class="footer">
-          &copy; <a href="http://www.aksts.ru">www.aksts.ru</a> 2012 - 2015
+          &copy; <a href="http://www.aksts.ru">www.aksts.ru</a> 2012 - 2017
         <nav>
           <ul>
             <li>
@@ -61,7 +61,7 @@
               <% else %>
                 Разработка сайта
               <% end %>
-              <a href="https://www.facebook.com/klishevich">Mikhail Klishevich</a></li>
+              <a href="http://www.busation.com">Майкл Клишевич</a></li>
           </ul>
         </nav>
       </footer>       
